--- a/scss/_promo_codes.scss
+++ b/scss/_promo_codes.scss
@@ -1,74 +1,112 @@
 .sale-price-promo > p {
-    min-height: 40px;
-    padding: 21px 11px ;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 20px;
-    text-align: center;
-    @include btnGreen;
+  min-height: 40px;
+  padding: 21px 11px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 8px;
+  @include btnGreen;
 }
 
 .sale-price-promo {
-    margin-right: 36px;
-    padding-left: 6px;
-    padding-top: 6px;
-    padding-bottom: 6px;
+  margin-right: 36px;
+  padding-left: 6px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.promo-list-wrp {
+  width: 1107px;
+  position: relative;
 }
 
 .sale-text-wrp-promo > h3 {
-    margin-bottom: 10px;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .sale-text-wrp-promo > p {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .sale-text-wrp-promo {
-    padding-top: 13px;
+  padding-top: 13px;
 }
 
 .sale-price-promo-wrp {
-    display: flex;
+  display: flex;
 }
 
-.promo-wrp-copy{
-    display: flex;
-    position: relative;
+.promo-wrp-copy {
+  display: flex;
+  position: relative;
 }
 
 .promo-wrp-copy > button {
-    border-radius: 8px;
-    padding: 12px 20px 12px 16px;
-    background-color: $color-main;
-    color: #ffffff;
-    z-index: 10;
-    font-size: 16px;
-    line-height: 20px;
+  border-radius: 8px;
+  padding: 12px 20px 12px 16px;
+  background-color: $color-main;
+  color: #ffffff;
+  z-index: 10;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .promo-wrp-copy > p {
-    position: relative;
-    width: 100%;
-    padding: 12px 16px 12px 16px;
-    top: 0;
-    left: -11px;
-    border-radius: 8px;
-    border: 1px solid $color-text-grey;
-    background-color: #ffffff;
-    z-index: 11;
+  position: relative;
+  width: 100%;
+  padding: 12px 16px 12px 16px;
+  top: 0;
+  left: -11px;
+  border-radius: 8px;
+  border: 1px solid $color-text-grey;
+  background-color: #ffffff;
+  z-index: 11;
+}
+
+.promotions-wrp {
+  padding-top: 10px;
+}
+
+.promotions-data {
+  padding-left: 16px;
+  padding-bottom: 16px;
+}
+
+.promotions-data > p {
+  margin-bottom: 16px;
+  padding-top: 16px;
+  font-size: 16px;
+}
+
+.promotion-img {
+  max-width: 368px;
+  width: 100%;
+}
+
+.promotions-data > a > p {
+  max-width: 215px;
+  text-decoration: underline;
+  font-size: 18px;
+}
+
+.promotion-data-wrp {
+  box-shadow: $block-shadow;
+  border-radius: 8px;
+  display: flex;
 }
 
 @media (max-width: 1220px) {
-    .sale-price-promo-wrp {
-        align-items: center;
-        flex-direction: column;
-    }
-    .sale-price-promo {
-        width: 127px;
-        margin-right: 0;
-        padding-left: 0;
-    }
+  .sale-price-promo-wrp {
+    align-items: center;
+    flex-direction: column;
+  }
+  .sale-price-promo {
+    width: 127px;
+    margin-right: 0;
+    padding-left: 0;
+  }
 }
