--- a/scss/_reviews.scss
+++ b/scss/_reviews.scss
@@ -35,6 +35,7 @@ body {
 }
 
 .reviews-list-wrp {
+  padding: 0;
   margin-bottom: 24px;
   @include wrpGeneral;
 }
@@ -42,7 +43,6 @@ body {
 .wrp-cont-rev {
   margin-bottom: 10px;
   padding-right: 14px;
-  // padding-left: 28px;
   @include wrpCont;
 }
 
@@ -66,7 +66,6 @@ body {
   position: relative;
   @extend %pos-left-flex;
 }
-
 
 .wrp-answer-reviews {
   @extend %pos-left-flex;
@@ -141,7 +140,7 @@ body {
 }
 
 @media (max-width: 1220px) {
-  .wrp-cont-rev{
+  .wrp-cont-rev {
     // padding-left: 24px;
     padding-right: 0;
   }
