--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 .btn-reviews-green, .sale-price-promo > p {
   padding: 8px 16px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border-radius: 6px;
   font-size: 18px;
 }
@@ -34,14 +35,24 @@
 }
 
 .name-orders-link, .menu-cab-wrp-link, .menu-cab-like-wrp, .reviews-product-wrp, .wrp-bonus-reviews, .wrp-answer-reviews {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .menu-cab-wrp {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 html,
@@ -67,7 +78,8 @@ body {
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border: 0 none;
   background-color: transparent;
   scroll-behavior: smooth;
@@ -146,6 +158,7 @@ select {
 input,
 textarea {
   outline: none;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -156,9 +169,12 @@ label {
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
   * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
+    -webkit-animation-duration: 0.01ms !important;
+            animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
+            animation-iteration-count: 1 !important;
+    -webkit-transition-duration: 0.01ms !important;
+            transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
 }
@@ -171,7 +187,9 @@ label {
   width: 100%;
   max-width: 1440px;
   padding-top: 16px;
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .name-orders {
@@ -187,7 +205,8 @@ label {
 
 .name-orders-link {
   min-height: 72px;
-  box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
   font-family: "Roboto", sans-serif;
   color: #363636;
   border-radius: 8px;
@@ -208,7 +227,9 @@ label {
 }
 
 .menu-cab-like-pos {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .menu-cab-wrp-link:hover {
@@ -217,11 +238,18 @@ label {
 
 .menu-cab-user {
   padding: 10px 14px;
-  box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column-reverse;
-  box-sizing: border-box;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .menu-cab-text-wrp + .menu-cab-text-wrp {
@@ -255,14 +283,21 @@ body {
   border: 1px solid #009b44;
   color: #009b44;
   font-size: 18px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-weight: 400;
 }
 
 .wrp-reviews {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   font-weight: 600;
   font-size: 16px;
 }
@@ -283,8 +318,12 @@ body {
 }
 
 .reviews-icon-mob-wrp {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .reviews-list-wrp {
@@ -298,9 +337,11 @@ body {
 .wrp-cont-rev {
   margin-bottom: 10px;
   padding-right: 14px;
-  box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .reviews-product-wrp {
@@ -336,6 +377,8 @@ body {
 }
 
 .wrp-revires-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -412,7 +455,10 @@ body {
     padding: 14px 9px;
   }
   .wrp-reviews {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .wrp-revires-btn {
     margin-bottom: 16px;
@@ -455,7 +501,8 @@ body {
   border: 1px solid #009b44;
   color: #009b44;
   font-size: 18px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-weight: 400;
 }
 
@@ -487,10 +534,14 @@ body {
 }
 
 .sale-price-promo-wrp {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .promo-wrp-copy {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
 }
@@ -524,6 +575,7 @@ body {
 .promotions-data {
   padding-left: 16px;
   padding-bottom: 16px;
+  margin-right: 31px;
 }
 
 .promotions-data > p {
@@ -537,6 +589,11 @@ body {
   width: 100%;
 }
 
+.promotion-img > img {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
 .promotions-data > a > p {
   max-width: 215px;
   text-decoration: underline;
@@ -544,15 +601,40 @@ body {
 }
 
 .promotion-data-wrp {
-  box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+}
+
+.promotion-days-left {
+  padding: 23px 18px;
+  background-color: #009b4433;
+  font-size: 16px;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-bottom-right-radius: 8px;
+}
+
+.promotion-days-left-text {
+  padding: 5px 0;
+  color: #009b44;
+  font-size: 36px;
+  font-weight: 500;
 }
 
 @media (max-width: 1220px) {
   .sale-price-promo-wrp {
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .sale-price-promo {
     width: 127px;
@@ -560,3 +642,111 @@ body {
     padding-left: 0;
   }
 }
+
+@media (max-width: 1427px) {
+  .promo-list-wrp {
+    width: 1000px;
+  }
+  .my-orders-heading {
+    max-width: 420px;
+  }
+}
+
+@media (max-width: 1327px) {
+  .promo-list-wrp {
+    width: 950px;
+  }
+  .my-orders-heading {
+    max-width: 375px;
+  }
+}
+
+@media (max-width: 1285px) {
+  .promo-list-wrp {
+    width: 900px;
+  }
+  .my-orders-heading {
+    max-width: 315px;
+  }
+  .wrp-reviews {
+    font-weight: 400;
+  }
+  .wrp-bonus-reviews > p {
+    font-size: 12px;
+    font-weight: 600;
+  }
+  .wrp-bonus-reviews {
+    margin-right: 9px;
+  }
+}
+
+@media (max-width: 1220px) {
+  .promotions-wrp {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .reviews-icon-mob-wrp {
+    padding-left: 15px;
+  }
+  .promo-wrp-copy {
+    padding-bottom: 14px;
+  }
+  .sale-text-wrp-promo {
+    text-align: center;
+    margin-bottom: 16px;
+  }
+  .sale-price-promo {
+    padding-top: 8px;
+  }
+  .wrp-cont-rev {
+    padding-right: 0;
+  }
+  .wrp-answer-reviews {
+    display: none;
+  }
+  .number-counter {
+    display: block;
+  }
+  .promo-list-wrp {
+    width: 363px;
+    padding: 0 9px;
+    margin: 0 auto;
+  }
+  .wrp-reviews {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .wrp-revires-btn {
+    margin-bottom: 16px;
+  }
+  .btn-reviews-green {
+    padding: 10px 10px;
+  }
+  .wrp-bonus-reviews > p {
+    width: 97px;
+  }
+  .reviews-icon-mob-wrp > h1 {
+    font-size: 16px;
+  }
+  .reviews-icon-mob-wrp > img {
+    display: block;
+  }
+  .my-orders-wrp > .reviews-icon-mob-wrp > h1 {
+    font-size: 16px;
+  }
+  .reviews-wrp-title {
+    padding-left: 15px;
+  }
+}
+
+@media (max-width: 710px) {
+  .menu-orders-wrp {
+    display: none;
+  }
+  .reviews-wrp-title {
+    padding: 0;
+  }
+}
+/*# sourceMappingURL=main.css.map */
