--- a/scss/_main_variable_gv_orders.scss
+++ b/scss/_main_variable_gv_orders.scss
@@ -14,6 +14,7 @@ $line-grey-col: 1px solid #c4c4c4;
 $color-hov: #287231;
 $block-shadow: 0px 3px 11px rgba(0, 0, 0, 0.1);
 $border-radius: 8px;
+$backColorTrans: #009b4433;
 
 //вложенности
 %text-centr {
