--- a/css/main.css
+++ b/css/main.css
@@ -556,7 +556,7 @@ body {
   line-height: 20px;
 }
 
-.promo-wrp-copy > p {
+.promo-input-copy {
   position: relative;
   width: 100%;
   padding: 12px 16px 12px 16px;
@@ -565,6 +565,7 @@ body {
   border-radius: 8px;
   border: 1px solid #8a8a8a;
   background-color: #ffffff;
+  text-align: center;
   z-index: 11;
 }
 
@@ -623,7 +624,7 @@ body {
   padding: 5px 0;
   color: #009b44;
   font-size: 36px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 @media (max-width: 1220px) {
@@ -703,9 +704,6 @@ body {
   }
   .wrp-answer-reviews {
     display: none;
-  }
-  .number-counter {
-    display: block;
   }
   .promo-list-wrp {
     width: 363px;
