--- a/scss/_promo_codes.scss
+++ b/scss/_promo_codes.scss
@@ -217,7 +217,7 @@
   .wrp-bonus-reviews > p {
     width: 97px;
   }
-  .reviews-icon-mob-wrp > h1 {
+  .reviews-icon-mob-wrp > h1,h2 {
     font-size: 16px;
   }
   .reviews-icon-mob-wrp > img {
